--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "materialize-css": "^1.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-responsive": "^9.0.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
