--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "materialize-css": "^1.0.0",
     "react": "^18.1.0",
+    "react-burger-menu": "^3.0.8",
     "react-dom": "^18.1.0",
     "react-responsive": "^9.0.0",
     "react-router-dom": "^6.4.2",
